Fix contrast in investment list
The color we used offered a contrast of 3.94 against the background. The
minimum requirement for AA level is a contrast of 4.5, and we usually
aim for a contrast of 5 at least.

So we're making the text slightly darker so it's easier to read.

--- a/app/assets/stylesheets/budgets/investments-list.scss
+++ b/app/assets/stylesheets/budgets/investments-list.scss
@@ -62,7 +62,7 @@
 
     .price-title,
     .supports-title {
-      color: #7b7b7b;
+      color: #696969;
       font-size: $small-font-size;
       text-transform: uppercase;
       width: 100%;
